--- a/notebooks/GAN Benchmarking.ipynb
+++ b/notebooks/GAN Benchmarking.ipynb
@@ -98,10 +98,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import scipy\n",
     "def DKL(pk, qk):\n",
     "    return scipy.stats.entropy(pk,qk)      "
    ]
@@ -131,24 +132,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/acevedo/Desktop/Gaussian_WGAN_GP/MicrobiotaGAN/notebooks\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pwd"
+    "model_path =  \"../model/dir1/my_gan.ckpt\"\n",
+    "\n",
+    "def pseudo_is_score(data, restore_path):\n",
+    "    x = get_disc_score(val, restore_path )\n",
+    "    \n",
+    "    logits = np.exp(x)\n",
+    "    \n",
+    "    py = np.mean(logits, keepdims = True)\n",
+    "    \n",
+    "    # pxy_k = logits[k,:]\n",
+    "    \n",
+    "    print(py.shape)\n",
+    "    print( logits.shape)\n",
+    "    \n",
+    "    assert py.shape[1] == logits.shape[1]\n",
+    "    \n",
+    "    N = data.shape[0]\n",
+    "    \n",
+    "    #pre_score = [DKL( logits[k,:], py ) for k in range(N) ]\n",
+    "    \n",
+    "    #pre_score = np.array(pre_score)\n",
+    "    return py, logits\n",
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -161,91 +177,48 @@
       "disc/fc-3/add   [None, 512]\n",
       "disc/fc-4/add   [None, 1]\n",
       "INFO:tensorflow:Restoring parameters from ../model/dir1/my_gan.ckpt\n",
-      "[[-0.10377242]\n",
-      " [-0.10363007]\n",
-      " [-0.10341614]\n",
-      " [-0.10626978]]\n"
+      "(1, 1)\n",
+      "(4, 1)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.9014304 ],\n",
-       "       [0.90155876],\n",
-       "       [0.90175164],\n",
-       "       [0.899182  ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "val = my_data[1:5,:] #.reshape(1,100)\n",
-    "x = get_disc_score(val,  \"../model/dir1/my_gan.ckpt\")\n",
-    "print(x)\n",
-    "np.exp(x)"
+    "\n",
+    "py, logits = pseudo_is_score(val, model_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0.8996851], dtype=float32)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m \u001b[0mget_disc_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrestore_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m <no docstring>\n",
-       "\u001b[0;31mSource:\u001b[0m   \n",
-       "\u001b[0;32mdef\u001b[0m \u001b[0mget_disc_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_data\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrestore_path\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mreal_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplaceholder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mdisc_real\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDiscriminator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreal_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mis_reuse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0msaver\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSaver\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0;32mwith\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msess\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m        \u001b[0msaver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrestore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msess\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrestore_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m        \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdisc_real\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mreal_data\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0minput_data\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m        \u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreset_default_graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0;32mreturn\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mFile:\u001b[0m      ~/Desktop/Gaussian_WGAN_GP/MicrobiotaGAN/get_disc_score.py\n",
-       "\u001b[0;31mType:\u001b[0m      function\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.018995643791203373\n",
+      "0.0\n"
+     ]
     }
    ],
    "source": [
-    "?? get_disc_score(val,  \"../model/dir1/my_gan.ckpt\")"
+    "a = logits[0,:]\n",
+    "\n",
+    "b = py\n",
+    "\n",
+    "r = DKL([0.1,0.2], [0.3,0.4])\n",
+    "\n",
+    "print(r)\n",
+    "\n",
+    "print(DKL(a,b[0]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ?? get_disc_score(val,  \"../model/dir1/my_gan.ckpt\")"
    ]
   },
   {
