outputs each n epochs

--- a/notebooks/GAN Benchmarking.ipynb
+++ b/notebooks/GAN Benchmarking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/acevedo/Desktop/Gaussian_WGAN_GP/MicrobiotaGAN/notebooks\n"
+      "/home/acevedo/Desktop/Current_GAN/MicrobiotaGAN/notebooks\n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -190,15 +190,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.018995643791203373\n",
-      "0.0\n"
+      "[0.9014304]\n",
+      "[[0.9009808]]\n"
      ]
     }
    ],
@@ -207,11 +207,8 @@
     "\n",
     "b = py\n",
     "\n",
-    "r = DKL([0.1,0.2], [0.3,0.4])\n",
-    "\n",
-    "print(r)\n",
-    "\n",
-    "print(DKL(a,b[0]))\n"
+    "print(a)\n",
+    "print(b)\n"
    ]
   },
   {
