Added scripts to generate data required to make the plots

--- a/notebooks/GAN Benchmarking.ipynb
+++ b/notebooks/GAN Benchmarking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/acevedo/Desktop/Current_GAN/MicrobiotaGAN/notebooks\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,11 +67,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_set, test_set = split_dataset(my_data, n=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.sum(my_data ==0))\n",
+    "print(np.sum(gan_data ==0))"
    ]
   },
   {
@@ -98,31 +125,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import scipy\n",
-    "def DKL(pk, qk):\n",
-    "    return scipy.stats.entropy(pk,qk)      "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/acevedo/Desktop/Current_GAN/MicrobiotaGAN/notebooks\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"../\")\n",
+    "import scipy\n",
+    "from sklearn.preprocessing import normalize\n",
+    "from numpy import inf\n",
+    "from copy import copy \n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -132,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,24 +183,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "is_reuse: False\n",
-      "disc/fc-1/add   [None, 512]\n",
-      "disc/fc-2/add   [None, 512]\n",
-      "disc/fc-3/add   [None, 512]\n",
-      "disc/fc-4/add   [None, 1]\n",
-      "INFO:tensorflow:Restoring parameters from ../model/dir1/my_gan.ckpt\n",
-      "(1, 1)\n",
-      "(4, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "val = my_data[1:5,:] #.reshape(1,100)\n",
     "\n",
@@ -191,28 +195,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.9014304]\n",
-      "[0.9009808]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = logits[0,:]\n",
     "\n",
@@ -228,7 +213,344 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ?? get_disc_score(val,  \"../model/dir1/my_gan.ckpt\")"
+    "# Directly use DKL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def DKL(pk_, qk_, epsilon = 0.01):\n",
+    "    \n",
+    "    \"\"\"   \n",
+    "    n = pk.shape[0]    \n",
+    "    normed_pk = normalize(pk.reshape(1,n),  norm='l1')\n",
+    "    normed_qk = normalize(qk.reshape(1,n), norm='l1')\n",
+    "    print(normed_pk)  \n",
+    "    \"\"\"\n",
+    "    pk = copy(pk_)\n",
+    "    qk = copy(qk_)\n",
+    "    \n",
+    "    #print(pk.shape)\n",
+    "    a = np.sum(pk ==0)\n",
+    "    b = np.sum(qk ==0)\n",
+    "    # assert a ==0 and b ==0\n",
+    "    \n",
+    "    #if  a !=0 or b !=0:\n",
+    "        #print(\"Padding Zeroes\")\n",
+    "\n",
+    "    # Beware  zeros\n",
+    "    pk[pk==0] = epsilon\n",
+    "    qk[qk==0] = epsilon\n",
+    "    \n",
+    "    return scipy.stats.entropy(pk,qk)      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(my_data.shape)\n",
+    "print(gan_data.shape)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gan_data.mean(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n =10000\n",
+    "a = gan_data[0:n,:].mean(axis=0)\n",
+    "b = my_data [0:n,:].mean(axis=0)\n",
+    "\n",
+    "print(np.sum(a ==0))\n",
+    "print(np.sum(b ==0))\n",
+    "\n",
+    "DKL(b,a) == DKL(b,a)\n",
+    "\n",
+    "DKL(a,b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = gan_data[0:n,:]\n",
+    "b = my_data [0:n,:]\n",
+    "\n",
+    "print(np.sum(a ==0))\n",
+    "print(np.sum(b ==0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "entropy = [DKL(a[k,:], b[k,:]) for k in range(n)]\n",
+    "entropy = np.array(entropy)\n",
+    "np.sum(entropy== inf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "entropy "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = 0\n",
+    "#print(a[k,:])\n",
+    "#print(b[k,:])\n",
+    "#print(scipy.spatial.distance.euclidean(a[k,:], b[k,:]))\n",
+    "\n",
+    "print(a[k,:].sum())\n",
+    "DKL(a[k,:], b[k,:]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "#entropy[entropy == inf] = 0\n",
+    "\n",
+    "from scipy.spatial import distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index_list = []\n",
+    "\n",
+    "for k in range(10000):\n",
+    "    if entropy[k] == inf:\n",
+    "        index_list.append(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = index_list[20]\n",
+    "\n",
+    "\n",
+    "DKL(a[k,:], b[k,:]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for e in range(len(index_list)):\n",
+    "    k = index_list[e]\n",
+    "    print(distance.jensenshannon(a[k,:], b[k,:]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = 87\n",
+    "\n",
+    "print(a[k,:].std())\n",
+    "print(b[k,:].std())\n",
+    "print(a[k,:].sum())\n",
+    "\n",
+    "DKL(a[k,:], b[k,:]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = distance.jensenshannon(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = b + np.random.normal(0,1,100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " \n",
+    "entropy2 = [distance.jensenshannon(a[k,:], b[k,:]) for k in range(n)]\n",
+    "entropy2 = np.array(entropy2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "entropy2.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "entropy4 = [DKL(a[k,:],b[k,:]) for k in range(n)]\n",
+    "entropy4 = np.array(entropy4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "entropy4.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = entropy4[entropy4 < 1E308]#.mean()\n",
+    "temp.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c =  b +0.1*np.random.normal(0,1,100)\n",
+    "c.mean()\n",
+    "\n",
+    "c =0.8*(b+0.9)\n",
+    "c.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "entropy3 = [DKL(a[k,:],c[k,:]) for k in range(n)]\n",
+    "entropy3 = np.array(entropy3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "entropy3[entropy3 < 1E308].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = entropy4[entropy4 < 1E308]#.mean()\n",
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(temp.shape)\n",
+    "np.mean(np.exp(temp))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "sns.set(color_codes=True)\n",
+    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.distplot(temp)"
    ]
   },
   {
